Fixing alignment of price tags

--- a/static/styles.css
+++ b/static/styles.css
@@ -172,6 +172,7 @@ h2 {
     height: 450px;
     background-color: #FFFFFF;
     padding: 0 60px;
+    position: relative;
 }
 
 .price-package * {
@@ -220,11 +221,10 @@ ul {
 .price {
     font-weight: bold;
     font-size: 32px;
-    margin: 80px auto;
-}
-
-#gold .price {
-    margin: 103px auto;
+    left: 50%;
+    transform: translateX(-50%);
+    position: absolute;
+    bottom: 20px;
 }
 
 #contact-section {
